DS-646 fix .o-section__heading to make underline highlight off center and behind text (eg, Recent in News)

--- a/app/styles/_library/_objects.sections.scss
+++ b/app/styles/_library/_objects.sections.scss
@@ -3,6 +3,8 @@
 \*------------------------------------*/
 
 .o-section__heading {
+  display: inline;
+
   @include typeface(header, 9);
   @include media(">=medium") {
     @include typeface(header, 11);
